[package]
name = "git-ws"
version = "0.1.0"
edition = "2024"

authors = ["Locez <loki.a@live.cn>"]
description = "git-ws is a git workspace manage tool"
repository = "https://github.com/locez/git-ws"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
git2 = "0.14"
tabled = {version = "0.7.0", features = ["color"]}
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
